--- a/list-page.html
+++ b/list-page.html
@@ -20,17 +20,45 @@
 <body onload="getTasks()">
     <div class="container">
         <div id="boxes">
-            <div id="dark-box-2">&nbsp;</div>
+            <div id="dark-box-2">
+                <i class="fa-solid fa-ellipsis" onclick="showMenu()"></i>
+                <i class="fa-solid fa-ellipsis-vertical" onclick="hideMenu()"></i>
+                <div id="menu">
+                    <div class="welcome-msg welcome-msg-menu">Bem-Vindo! João,</div>
+                    <button type="button" id="add-button" class="add-button add-button-menu"
+                        onclick="showModal('addTask'), hideMenu()">&plus;&nbsp;<span>Adicionar
+                            nova
+                            tarefa</span></button>
+                    <button type="button" id="filter-today" class="filter-button filter-button-menu">Hoje</button>
+                    <button type="button" id="filter-ongoing" class="filter-button filter-button-menu"
+                        onclick="filterOngoing(), hideMenu()">Em
+                        andamento</button>
+                    <button type="button" id="finished" class="filter-button filter-button-menu" onclick="hideMenu()">Concluída</button>
+                    <button type="button" id="stopped" class="filter-button filter-button-menu" onclick="hideMenu()">Parada</button>
+                    <button type="button" id="delayed" class="filter-button filter-button-menu" onclick="hideMenu()">Atrasadas</button>
+                    <div class="search-placeholder">
+                        <form id="search" method="post">
+                            <i class="fa-solid fa-magnifying-glass"></i>
+                            <input type="search" id="search" name="search" class="search-input" />
+                        </form>
+                    </div>
+                </div>
+            </div>
+
             <div id="light-box-2">&nbsp;</div>
             <div id="polygon">&nbsp;</div>
         </div>
+
         <div id="icon-toggle">
             <i id="icon-mode" class="fa-solid fa-toggle-off fa-3x" onclick="darkMode()"></i>
             <i id="icon-moon" class="fa fa-moon fa-sm"></i>
             <i id="icon-sun" class="fa fa-sun fa-xs"></i>
         </div>
-        <div class="exit-icon">
-            <i class="fa-solid fa-right-from-bracket fa-xl" onclick="window.location.href='index.html'"></i>
+        <div class="exit-section">
+            <div class="exit-icon">
+                <i class="fa-solid fa-right-from-bracket fa-xl" onclick="window.location.href='index.html'"></i>
+            </div>
+            <div class="welcome-msg">Bem-Vindo! João,</div>
         </div>
         <div class="container-list-page">
             <div class="header">
@@ -42,15 +70,17 @@
                     <div>Gerenciador de Tarefas</div>
                 </div>
                 <div>
-                    <button type="button" id="add-button" onclick="showModal()">&plus;&nbsp;<span>Adicionar nova
+                    <button type="button" id="add-button" class="add-button"
+                        onclick="showModal('addTask')">&plus;&nbsp;<span>Adicionar
+                            nova
                             tarefa</span></button>
                 </div>
             </div>
-
             <div class="filter-section">
                 <div>
                     <button type="button" id="filter-today" class="filter-button">Hoje</button>
-                    <button type="button" id="filter-ongoing" class="filter-button">Em andamento</button>
+                    <button type="button" id="filter-ongoing" class="filter-button" onclick="filterOngoing()">Em
+                        andamento</button>
                     <button type="button" id="finished" class="filter-button">Concluída</button>
                     <button type="button" id="stopped" class="filter-button">Parada</button>
                     <button type="button" id="delayed" class="filter-button">Atrasadas</button>
@@ -65,7 +95,7 @@
 
             <div class="table-content">
                 <div class="table-responsive">
-                    <table class="table table-striped table-borderless">
+                    <table class="table table-striped table-borderless" id="table-list">
                         <thead>
                             <tr>
                                 <th class="col-1">Núm</th>
@@ -81,7 +111,7 @@
                 </div>
             </div>
 
-            <div class="modal" id="modal">
+            <div class="modal modal-form" id="modal">
                 <div class="modal-content">
                     <div class="card-title" id="action-title">
                         Adicionar nova tarefa
@@ -118,15 +148,17 @@
                 </div>
             </div>
 
-            <div class="modal-trash" id="modal-trash">
+            <div class="modal modal-trash" id="modal-trash">
                 <div class="modal-trash-content">
-                    <div class="card-trash-title">Deseja realmente cancelar essa tarefa?<span>Essa ação é
-                            irreversível!</span></div>
-                    <button>Cancelar</button>
-                    <button>Deletar</button>
+                    <div class="card-trash-title">Deseja realmente cancelar essa tarefa?<p><br>Essa ação é
+                            irreversível!</p>
+                    </div>
+                    <div class="card-trash-footer">
+                        <button type="button" id="cancel-task-button" onclick="closeModal()">Cancelar</button>
+                        <button type="submit" id="delete-task-button" onclick="deleteTask()">Deletar</button>
+                    </div>
                 </div>
             </div>
-
         </div>
     </div>
 </body>
