--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./assets/style.css" />
-    <script src="./js/user.js" defer></script>
+    <script src="./js/user.js?v=2" defer></script>
 </head>
 
 <body>
@@ -50,7 +50,7 @@
                 <section class="login-field">
                     <div>
                         <label for="pasword">Senha</label>
-                        <input type="password" name="pasword" id="password" class="input-login" oninput="validatePassword()"> 
+                        <input type="password" name="pasword" id="password-login" class="input-login" oninput="validatePassword()"> 
                         <i class="fa-solid fa-circle-check check-input-login"></i>
                         <i class="fa-solid fa-circle-exclamation exclamation-input-login"></i>
                         <i class="fa-regular fa-eye-slash" id="eye" onclick="changeEye()"></i>
