--- a/list-page.html
+++ b/list-page.html
@@ -29,16 +29,15 @@
                         onclick="showModal('addTask'), hideMenu()">&plus;&nbsp;<span>Adicionar
                             nova
                             tarefa</span></button>
-                    <button type="button" id="filter-today" class="filter-button filter-button-menu">Hoje</button>
+                    <button type="button" id="filter-all" class="filter-button filter-button-menu"
+                        onclick="getAll(), hideMenu()">Todas</button>
                     <button type="button" id="filter-ongoing" class="filter-button filter-button-menu"
                         onclick="getOnGoing(), hideMenu()">Em
                         andamento</button>
                     <button type="button" id="finished" class="filter-button filter-button-menu"
                         onclick="getFinished(),hideMenu()">Concluída</button>
                     <button type="button" id="stopped" class="filter-button filter-button-menu"
-                        onclick="getStopped(),hideMenu()">Parada</button>
-                    <button type="button" id="delayed" class="filter-button filter-button-menu"
-                        onclick="hideMenu()">Atrasadas</button>
+                        onclick="getStopped(),hideMenu()">Pausada</button>
                     <div class="search-placeholder">
                         <form id="search" method="post">
                             <i class="fa-solid fa-magnifying-glass"></i>
@@ -54,17 +53,18 @@
             <div id="light-box-2">&nbsp;</div>
             <div id="polygon">&nbsp;</div>
         </div>
-
         <div id="icon-toggle">
             <i id="icon-mode" class="fa-solid fa-toggle-off fa-3x" onclick="darkMode()"></i>
-            <i id="icon-moon" class="fa fa-moon fa-sm"></i>
-            <i id="icon-sun" class="fa fa-sun fa-xs"></i>
+            <div class="sun-and-moon">
+                <i id="icon-sun" class="fa fa-sun fa-xs"></i>
+                <i id="icon-moon" class="fa fa-moon fa-sm"></i>
+            </div>
         </div>
         <div class="exit-section">
             <div class="exit-icon">
                 <i class="fa-solid fa-right-from-bracket fa-xl" onclick="window.location.href='index.html'"></i>
             </div>
-            <div class="welcome-msg">Bem-Vindo!</div>
+            <div id="welcome-msg">Bem-Vindo!</div>
         </div>
         <div class="container-list-page">
             <div class="header">
@@ -76,62 +76,54 @@
                     <div>Gerenciador de Tarefas</div>
                 </div>
                 <div>
-                    <button type="button" id="add-button" class="add-button"
+                    <button type="button" id="add-button" class="add-button dark-btn-1" 
                         onclick="showModal('addTask')">&plus;&nbsp;<span>Adicionar nova tarefa</span></button>
                 </div>
             </div>
             <div class="filter-section">
-                <div>
-                    <!-- <button type="button" id="filter-today" class="filter-button">Hoje</button> -->
-                    <button type="button" id="filter-ongoing" class="filter-button" onclick="getOnGoing()">Em
-                        andamento</button>
-                    <button type="button" id="finished" class="filter-button" onclick="getFinished()">Concluída</button>
-                    <button type="button" id="stopped" class="filter-button" onclick="getStopped()">Parada</button>
-                    <!-- <button type="button" id="delayed" class="filter-button">Atrasadas</button> -->
-                </div>
-                <div class="search-placeholder">
-                    <form id="search-form" method="post">
-                        <i class="fa-solid fa-magnifying-glass"></i>
-                        <input type="search" id="search" name="search" class="search-input" onload="getSearch()"/>
-                    </form>
-                </div>
+                <button type="button" id="filter-all" class="filter-button dark-btn-2" onclick="getAll()">Todas</button>
+                <button type="button" id="filter-ongoing" class="filter-button dark-btn-3" onclick="getOnGoing()">Em
+                    andamento</button>
+                <button type="button" id="finished" class="filter-button dark-btn-4" onclick="getFinished()">Concluída</button>
+                <button type="button" id="stopped" class="filter-button dark-btn-5" onclick="getStopped()">Pausada</button>
             </div>
             <div class="table-content">
-                <div class="table-responsive">
-                    <table class="table table-striped table-borderless" id="table-list">
+                <table class="table-list">
+                    <table class="table table-striped table-borderless" >
                         <thead>
                             <tr>
-                                <th class="col-1">Núm
-                                    <i class="fa-solid fa-sort-up arrow-filter" onclick="getOrderNumAsc()"></i>
-                                    <i class="fa-solid fa-sort-down" onclick="getOrderNumDesc()"></i>
+                                <th class="col-1 dark-1">Núm
+                                    <i class="fa-solid fa-sort-up arrow-filter arrow-filter-responsive"
+                                        onclick="getOrderNumAsc()"></i>
+                                    <i class="fa-solid fa-sort-down arrow-filter-responsive"
+                                        onclick="getOrderNumDesc()"></i>
                                 </th>
-                                <th class="col-4">Descrição</th>
-                                <th class="col-3">Data de Entrega
-                                    <i class="fa-solid fa-sort-up arrow-filter" onclick="getOrderDateAsc()"></i>
-                                    <i class="fa-solid fa-sort-down" onclick="getOrderDateDesc()"></i>
+                                <th class="col-4 dark-2">Descrição
+                                    <i class="fa-solid fa-sort-up arrow-filter arrow-filter-responsive"
+                                        onclick="getOrderDescripAsc()"></i>
+                                    <i class="fa-solid fa-sort-down arrow-filter-responsive"
+                                        onclick="getOrderDescripDesc()"></i>
                                 </th>
-                                <th class="col-3">Status
-                                    <i class="fa-solid fa-sort-up arrow-filter" onclick="getOrderStatusAsc()"></i>
-                                    <i class="fa-solid fa-sort-down" onclick="getOrderStatusDesc()"></i>
+                                <th class="col-3 dark-3">Data de Entrega
+                                    <i class="fa-solid fa-sort-up arrow-filter arrow-filter-responsive"
+                                        onclick="getOrderDateAsc()"></i>
+                                    <i class="fa-solid fa-sort-down arrow-filter-responsive"
+                                        onclick="getOrderDateDesc()"></i>
                                 </th>
-                                <th class="col">Ação</th>
+                                <th class="col-3 dark-4">Status
+                                    <i class="fa-solid fa-sort-up arrow-filter arrow-filter-responsive"
+                                        onclick="getOrderStatusAsc()"></i>
+                                    <i class="fa-solid fa-sort-down arrow-filter-responsive"
+                                        onclick="getOrderStatusDesc()"></i>
+                                </th>
+                                <th class="col dark-5">Ação</th>
                             </tr>
                         </thead>
                         <tbody id="tbody-content" class="tbody-content">
                         </tbody>
                     </table>
-                </div>
+                </table>
             </div>
-            <!-- <div class="arrow-footer">
-                <div class="arrow-previous">
-                    <i class="fa-solid fa-chevron-left"></i>
-                    <div class="arrow-content">Anterior</div>
-                </div>
-                <div class="arrow-next">
-                    <div class="arrow-content">Próximo</div>
-                    <i class="fa-solid fa-chevron-right"></i>
-                </div>
-            </div> -->
             <div class="modal modal-form" id="modal">
                 <div class="modal-content">
                     <div class="card-title" id="action-title">
@@ -168,10 +160,9 @@
                     </form>
                 </div>
             </div>
-
             <div class="modal modal-trash" id="modal-trash">
                 <div class="modal-trash-content">
-                    <div class="card-trash-title">Deseja realmente cancelar essa tarefa?<p><br>Essa ação é
+                    <div class="card-trash-title">Deseja realmente excluir essa tarefa?<p><br>Essa ação é
                             irreversível!</p>
                     </div>
                     <div class="card-trash-footer">
